[package]
name = "kappa"
version = "0.1.0"
edition = "2024"
description = "Yet another actor framework, this one based on the lambdas/behaviors."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/tiberiusCN/kappa"
repository = "https://github.com/tiberiusCN/kappa"
keywords = ["actor"]

[dependencies]
env_logger = "0.11"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3", optional = true }

[features]
default = []
actor-debug = []
full = ["warp"]